--- a/html/index_wip.html
+++ b/html/index_wip.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+   
     <header>
         Gen Con Hotel Status 2024
     </header>
@@ -19,10 +19,10 @@
         <div class="column">
             <div class="button-updated">
                 Gencon Hotels Last Update:
-                <div id="TimeStamp">
+                <div id="TimeStamp" class="TimeStamp">
                     <!-- Timestamp will be populated dynamically by JavaScript -->
                 </div>
-                <button id="toggle-all">Collapse/Expand All</button>
+                <button id="toggle-all" class="toggle-all">Collapse/Expand All</button>
             </div>
             <div class="table-stuff">
            
@@ -36,7 +36,7 @@
             <div class="alerts-container">
                 <div class="row">
                     <div class="button">
-                        <button id="toggle-all">Collapse/Expand All</button>
+                        <button id="toggle-all" class="toggle-all">Collapse/Expand All</button>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
 
                     <div class="wording">
                         Gencon Hotels Last Update:
-                        <div id="TimeStamp">
+                        <div id="TimeStamp"  class="TimeStamp">
                             <!-- Timestamp will be populated dynamically by JavaScript -->
                         </div>
                     </div>
